--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <ol >
 
         <li ><a href="simplecode.html" target="_blank" class="maintopic"> Simple Code</a></li>
-        <li ><a href="" target="_blank" class="maintopic"> </a></li>
+        <li ><a href="if else.html" target="_blank" class="maintopic">If else</a></li>
         <li ><a href="" target="_blank" class="maintopic"> </a></li>
         <li ><a href="" target="_blank" class="maintopic"> </a></li>
         <li ><a href="" target="_blank" class="maintopic"> </a></li>
