--- a/table.html
+++ b/table.html
@@ -37,7 +37,7 @@
         &nbsp;printf
         <span class="firstbracket">(</span>
         <span class="text">"\nTable of %d is&nbsp;:-&nbsp;"</span>
-        ,&num
+        ,num
         <span class="firstbracket">)</span>
         ;
         <br>
